# gps-denied-drone

./: .env  .gitignore  DEVELOPMENT_STATUS.md  IMPLEMENTATION_PLAN.md  Makefile  README.md  docker-compose.gui.yml  docker-compose.yml
config/: uxrce_dds_topics.yaml
config/openvins/: d435i_real.yaml  d435i_sim.yaml
config/px4_params/: real_gps_denied.params  sim_gps_denied.params
docker/: Dockerfile.as2  Dockerfile.hw  Dockerfile.hw_autonomy  Dockerfile.px4_sim  Dockerfile.px4_sitl  Dockerfile.ros2  Dockerfile.ros2_autonomy  Dockerfile.vio  entrypoint_hw_autonomy.sh  entrypoint_ros2_autonomy.sh
docker/px4_sitl_models/d435i/: model.config  model.sdf
docker/px4_sitl_models/x500_d435i_depth/: model.sdf
docker/px4_sitl_overrides/: 4002_gz_x500_depth.post
docker/px4_sitl_worlds/: empty.sdf  vio_test.sdf
docker/px4_sitl_worlds/textures/: generate_vio_ground_mosaic.py
operator_portal/: README.md  development_flow.md  index.html
operator_portal/resources/: ground_control_portal_plan.md
resource/: Vio_Drift_analysis.txt  hardware-bringup-gps.md  hardware-bringup-vio.md  known-issues.md  mission-testing.md  phase3-gps-denied-localization-source.md  reference.md  setup-guide.md
ros2_ws/src/common_control/: package.xml  setup.cfg  setup.py
ros2_ws/src/common_control/common_control/: offboard_control_node.py
ros2_ws/src/common_missions/: package.xml  setup.cfg  setup.py
ros2_ws/src/common_missions/common_missions/: mission_base.py  square_mission.py  survey_mission.py
ros2_ws/src/common_missions/launch/: autonomy.launch.py  mission.launch.py
ros2_ws/src/common_perception/: package.xml  setup.cfg  setup.py
ros2_ws/src/common_perception/common_perception/: frame_transforms.py  loopback_odometry_bridge.py  openvins_odometry_bridge.py  set_localization_source.py  state_tf_publisher.py  wait_for_vision.py
ros2_ws/src/common_perception/config/: quad.rviz  ros_gz_bridge.yaml
ros2_ws/src/common_perception/config/openvins/: estimator_config.yaml  estimator_config_hw.yaml  kalibr_imu_chain.yaml  kalibr_imu_chain_hw.yaml  kalibr_imucam_chain.yaml  kalibr_imucam_chain_hw.yaml
ros2_ws/src/common_perception/launch/: hw_vio.launch.py  vio.launch.py  viz.launch.py
ros2_ws/src/hw_bringup/: package.xml  setup.cfg  setup.py
ros2_ws/src/hw_bringup/config/: hw_params.yaml
ros2_ws/src/hw_bringup/launch/: hw.launch.py
ros2_ws/src/quad_core/: mission.py  package.xml  setup.cfg  setup.py
ros2_ws/src/quad_core/config/: ekf2_vio.params  vio_d435i.yaml
ros2_ws/src/quad_core/quad_core/: __init__.py  mission_planner.py  offboard_controller.py  vio_bridge.py
ros2_ws/src/quad_real/: launch_as2.bash  package.xml  setup.cfg  setup.py
ros2_ws/src/quad_real/config/: as2_platform_hw.yaml  real_params.yaml  realsense_hw.yaml  state_estimator_hw.yaml
ros2_ws/src/quad_real/launch/: hw.launch.py  real_base.launch.py
ros2_ws/src/quad_sim/: launch_as2.bash  package.xml  setup.cfg  setup.py  stop.bash
ros2_ws/src/quad_sim/config/: as2_platform_sim.yaml  motion_controller_sim.yaml  sim_params.yaml  state_estimator_sim.yaml  world.yaml
ros2_ws/src/quad_sim/launch/: sim.launch.py  sim_base.launch.py
ros2_ws/src/sim_bringup/: package.xml  setup.py
ros2_ws/src/sim_bringup/config/: sim_params.yaml
ros2_ws/src/sim_bringup/launch/: sim.launch.py
scripts/: health_check.sh  launch_hw.sh  launch_sim.sh  px4_params_upload.sh  setup_host.sh  upload_px4_params.py
