<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>common_control</name>
  <version>0.1.0</version>
  <description>
    Offboard flight control node talking directly to PX4 over its native
    uXRCE-DDS ROS 2 bridge (px4_msgs). Identical in sim and on real hardware.
  </description>
  <maintainer email="a.bera.gcect@gmail.com">Abhishek Bera</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>px4_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
