<?xml version="1.0"?>
<package format="3">
  <name>quad_real</name>
  <version>0.1.0</version>
  <description>
    Real hardware package for GPS-denied quadcopter.
    Contains ONLY launch files and hardware config.
    All actual flight logic lives in quad_core (identical to sim).
    
    Launch files:
      real_base.launch.py : Phase 5 — UART bridge + DDS agent
      real_vio.launch.py  : Phase 5 — RealSense + OpenVINS + mission
  </description>

  <maintainer email="your@email.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>quad_core</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
