<?xml version="1.0"?>
<package format="3">
  <name>quad_sim</name>
  <version>0.2.0</version>
  <description>
    Simulation launch files and config for GPS-denied quadcopter.
    Contains ONLY launch files and YAML config — no flight logic.
    All autonomy code lives in quad_core.

    Launch files:
      sim.launch.py  → starts full simulation world (4 AS2 nodes)
  </description>

  <maintainer email="a.bera.gcect@gmail.com">Abhishek Bera</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>quad_core</depend>
  <depend>as2_platform_pixhawk</depend>
  <depend>as2_state_estimator</depend>
  <depend>as2_motion_controller</depend>
  <depend>as2_behaviors_motion</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
