<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sim_bringup</name>
  <version>0.1.0</version>
  <description>
    Simulation bringup: launch + world/connection config for flying the shared
    common_control / common_missions autonomy against PX4 SITL (Gazebo Harmonic)
    over the uXRCE-DDS UDP bridge. Contains no flight logic — only launch files
    and a sim params YAML. The real-hardware counterpart is hw_bringup.
  </description>
  <maintainer email="a.bera.gcect@gmail.com">Abhishek Bera</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>common_control</exec_depend>
  <exec_depend>common_missions</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
